--- a/jsf_maven/pom.xml
+++ b/jsf_maven/pom.xml
@@ -502,7 +502,12 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate</artifactId>
+            <version>3.2.6.ga</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
